# Vitals_Monitoring_System_stage_5

./: CMakeLists.txt  nrf52dk_nrf52832.overlay  pm_static.yml  prj.conf
boards/: adpd144ri.overlay
src/: adpd144ri.c  adpd144ri.h  ble.c  ble.h  button.c  button.h  gpio.c  gpio.h  lis3dh.c  lis3dh.h  main.c  rtc.c  rtc.h  temp.c  temp.h  ws2812.c  ws2812.h
